# obsidian-capture

./: LICENSE  README.md  README_zh.md  SKILL.md  pyproject.toml
assets/: douyin.md.j2  paper.md.j2  web_article.md.j2  wechat.md.j2
capture/: __init__.py  cli.py  config.py  dedup.py  obsidian_writer.py  renderer.py
capture/sources/: __init__.py  base.py  douyin.py  paper.py  web_article.py  wechat.py
marvis-skill/: skill.md
references/: frontmatter.md  gotchas.md  templates.md  vault-structure.md
scripts/: check_dup.ps1  verify_note.ps1
templates/: douyin.md.j2  paper.md.j2  web_article.md.j2  wechat.md.j2
