[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obsidian-capture"
version = "0.1.0"
description = "Capture WeChat/Douyin/Zhihu articles and save to Obsidian"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"},
]
keywords = ["obsidian", "capture", "wechat", "douyin", "zhihu", "pdf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Text Processing :: Markup :: Markdown",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "playwright>=1.45.0",
    "pdfplumber>=0.11.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0",
    "black>=24.0",
    "isort>=5.12",
    "mypy>=1.0",
]

[project.scripts]
capture = "capture.cli:main"

[project.urls]
Homepage = "https://github.com/<user>/obsidian-capture"
Repository = "https://github.com/<user>/obsidian-capture"
Issues = "https://github.com/<user>/obsidian-capture/issues"

[tool.hatch.build.targets.wheel]
packages = ["capture"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
